# algorithm-practices

./: .gitignore  pyproject.toml
helper/: Helper.py  ListNode.py  pyproject.toml
tests/leetcode/easy/: test_141_Linked_List_Cycle.py  test_206_Reverse_Linked_List.py  test_21_Merge_Two_Sorted_Lists.py  test_26_Remove_Duplicates_from_Sorted_Array.py  test_27_Remove_Element.py  test_283_Move_Zeroes.py  test_35_Search_Insert_Position.py  test_367_Valid_Perfect_Square.py  test_69_Sqrt_x.py  test_704_Binary_Search.py  test_83_Remove_Duplicates_from_Sorted_List.py  test_844_Backspace_String_Compare.py  test_876_Middle_of_the_Linked_List.py
tests/leetcode/medium/: test_34_Find_First_and_Last_Position_of_Element_in_Sorted_Array.py  test_92_Reverse_Linked_List_II.py  test_9_Remove_Nth_Node_From_End_of_List.py
