[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["ZhgChgLi <zhgchgli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
